crates/ignis_driver/tests/snapshots/e2e_ok__pipe_placeholder_last.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 123
stdout: (empty)
stderr: (empty)
