crates/ignis_driver/tests/snapshots/e2e_ok__pipe_with_closure_capture.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 12
stdout: (empty)
stderr: (empty)
